--- a/pom.xml
+++ b/pom.xml
@@ -16,35 +16,13 @@
 
     <repositories>
         <repository>
-            <id>jogamp</id>
+            <id>jogamp.org</id>
             <url>https://jogamp.org/deployment/maven/</url>
         </repository>
     </repositories>
 
     <dependencies>
-        <dependency>
-            <groupId>org.jogamp.gluegen</groupId>
-            <artifactId>gluegen-rt</artifactId>
-            <version>2.4.0</version>
-        </dependency>
 
-        <dependency>
-            <groupId>org.jogamp.jogl</groupId>
-            <artifactId>jogl-all</artifactId>
-            <version>2.4.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.jogamp.jocl</groupId>
-            <artifactId>jocl</artifactId>
-            <version>2.4.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.jogamp.joal</groupId>
-            <artifactId>joal</artifactId>
-            <version>2.4.0</version>
-        </dependency>
     </dependencies>
 
 </project>
